# MedEval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
nneval/: __init__.py  config_entry.py  evaluate_instance.py  evaluate_instance_entrypoint.py  evaluate_semantic.py  evaluate_semantic_entrypoint.py  generate_instances.py  generate_instances_entrypoint.py  instance_entrypoint.py  instance_filter_sweep.py  semantic_entrypoint.py  semantic_filter_sweep.py
nneval/configs/: brain_mets.yaml
nneval/deprecated/: brain_mets_share_spacing.py  run_evaluation.py  soft_evaluation.py
nneval/deprecated/evaluation/: csv_analysis.py  f1_score_plot.py  hard_evaluation.py  match_segmentations.py  plot_match_pd_gt_size_scatter.py  plot_size_dice_correlation.py  plot_true_false_histograms.py
nneval/deprecated/samplewise/: run_samplewise.py  samplewise_evaluation.py
nneval/deprecated/visualization/: casewise_f1.py  casewise_plots.py  dice_to_volume.py  thresholding_plot.py
nneval/deprecated/visualizations/: lesionwise_casewise.py
nneval/evaluate/: instance_eval.py  semantic_eval.py
nneval/exporting/: color_code_table.py  mamba_spacing_ablation.py
nneval/nnunet_interfacing/: validation_results.py
nneval/scripts/: collect_results_v2.py  start_script.py
nneval/utils/: datastructures.py  default_values.py  find_test_set.py  io.py  naming_conventions.py  parser.py
nneval/visualizations/: confusion_matrices.py  lesionwise_casewise.py
scripts/: collect_results.py  evaluate.py  start_script.py
sem2ins/: run_evaluation.py
sem2ins/evaluations/: hard_evaluation.py  soft_evaluation.py  utilities.py
sem2ins/instancewise/: connected_components.py  match_segmentations.py  preprocessing.py  resample.py
sem2ins/samplewise/: run_samplewise.py  samplewise_evaluation.py
sem2ins/utils/: configuration.py  default_values.py  loading.py
sem2ins/visualizations/: architecture_wise_performance.py  lesionwise_casewise.py
tests/: test_loading.py  test_semantic_eval.py
tests/ins_test_data/multi_class/eval/: ._instance_evaluation.csv  instance_evaluation.csv
tests/ins_test_data/single_class/eval/: instance_evaluation.csv
tests/sem_test_data/single_class/: readme.md
(+3 files in other folders)
