[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sem2ins"
version = "0.0"
authors = [{name = "Tassilo Wald", email = "tassilo.wald@dkfz-heidelberg.de"}]
description = "Takes nnU-Net and provides evaluation for a clinical publication from it. Inclduing instance-wise evaluation."

dynamic = ["dependencies"]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GENERAL PUBLIC LICENSE",
]


[tool.black]
line-length = 118

[project.urls]
"Homepage" = "https://git.dkfz.de/mic/personal/group2/tassilow/sem2ins"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.scripts]
# my-script = "my_package.module:function"