[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nneval"
version = "0.0"
authors = [{name = "Tassilo Wald", email = "tassilo.wald@dkfz-heidelberg.de"}]
description = "Takes nnU-Net and provides evaluation for a clinical publication from it. Inclduing instance-wise evaluation."
dependencies = [
    'batchgenerators',
    'matplotlib',
    'numpy',
    'pandas',
    'scikit-image',
    'scipy',
    'seaborn',
    'SimpleITK',
    'openpyxl',
    'xlsxwriter',
    'statannotations',
    'monai',
    'tqdm',
    'loguru',
    'pyyaml'
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GENERAL PUBLIC LICENSE",
]

[tool.black]
line-length = 118

[project.urls]
"Homepage" = "https://git.dkfz.de/mic/personal/group2/all/2instance"

[tool.pytest.ini_options]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]


[project.scripts]
nneval_semantic_eval = "nneval.evaluate_semantic_entrypoint:semantic_evaluation_entrypoint"
nneval_instance_eval = "nneval.evaluate_instance_entrypoint:instance_evaluation_entrypoint"
nneval_create_instances = "nneval.generate_instances_entrypoint:create_instances_entrypoint"
